# Hybrid_A_Star

./: .gitignore  README.md  problem.txt
.history/: README_20250630003003.md  README_20250630010258.md  README_20250630010446.md  README_20250630010751.md  README_20250701005603.md  README_20250701010341.md  README_20250703225706.md  README_20250704002406.md  README_20250704002506.md  README_20250704002654.md
.history/doc/: 1.地图导入_20250703225627.md
.history/src/hybrid_astar_planner/: CMakeLists_20250701235330.txt  CMakeLists_20250702000303.txt  CMakeLists_20250702000425.txt  CMakeLists_20250702001042.txt  package_20250701235330.xml  package_20250702000445.xml
.history/src/hybrid_astar_planner/include/hybrid_astar_planner/: planner_20250702003721.hpp  planner_20250702003742.hpp
.history/src/hybrid_astar_planner/launch/: planner.launch_20250702000645.py  planner.launch_20250702004306.py  planner.launch_20250702004327.py  planner.launch_20250702004330.py
.history/src/hybrid_astar_planner/src/: planner_20250701235611.cpp  planner_20250701235627.cpp  planner_20250702003500.cpp  planner_20250702003519.cpp  planner_20250702003700.cpp  planner_20250702004413.cpp  planner_20250702004431.cpp  planner_20250703225601.cpp  planner_20250703230612.cpp  planner_20250703230651.cpp  planner_20250704002542.cpp
.history/src/map_loader/: CMakeLists_20250630222353.txt  CMakeLists_20250630223126.txt  CMakeLists_20250701225624.txt  package_20250630222353.xml  package_20250701231655.xml  package_20250702000912.xml  package_20250704002709.xml
.history/src/map_loader/config/: make_map_20250630231328.py  map_20250630224328.txt  map_20250630230737.txt
.history/src/map_loader/include/map_loader/: map_loader_20250630222705.hpp
.history/src/map_loader/launch/: map_display.launch_20250701225737.py  map_loader.launch_20250701225657.py
.history/src/map_loader/src/: map_loader_20250630222742.cpp  map_loader_20250630223658.cpp  map_loader_20250630224354.cpp  map_loader_20250630230805.cpp  map_loader_20250701230731.cpp  map_loader_20250703230603.cpp  map_loader_20250703230701.cpp
.history/src/trajectory_planner/: CMakeLists_20250630003915.txt  CMakeLists_20250630005544.txt
.history/src/trajectory_planner/src/: main_node_20250630005545.cpp
doc/: 1.map_loader.md  1.地图导入.md  1.地图工具.md  2.路经规划.md  3.路经优化.md  HybridAStar.md  Log.md  关于CMake.md
install/: local_setup.sh  setup.sh
install/trajectory_planner/lib/trajectory_planner/: main_node
install/trajectory_planner/share/trajectory_planner/: local_setup.sh  package.sh
src/car_msgs/: CMakeLists.txt  package.xml
src/car_simulator/: CMakeLists.txt  package.xml
src/car_simulator/config/: car_simulator.yaml
src/car_simulator/include/car_simulator/: car_simulator_node.hpp
src/car_simulator/launch/: car_simulator.launch.py
src/car_simulator/src/: car_simulator_node.cpp
src/hybrid_astar_planner/: CMakeLists.txt  package.xml
src/hybrid_astar_planner/config/: planner_params.yaml
src/hybrid_astar_planner/include/hybrid_astar_algorithm/: bucketedqueue.h  bucketedqueue.hpp  dynamicvoronoi.hpp  hybrid_a_star.hpp  rs_path.hpp
src/hybrid_astar_planner/include/hybrid_astar_planner/: planner.hpp
src/hybrid_astar_planner/launch/: planner.launch.py  planner_all.launch.py
src/hybrid_astar_planner/rviz/: planner_view.rviz
src/hybrid_astar_planner/src/: bucketedqueue.cpp  dubins.cpp  dynamicvoronoi.cpp  hybrid_a_star.cpp  initialpose_to_startpoint.cpp  planner.cpp  planner_node.cpp  rs_path.cpp
src/map_loader/: package.xml
src/map_loader/config/: make_map.py  map.txt
src/map_loader/launch/: map_display.launch.py  map_loader.launch.py
src/map_loader/rviz/: map_display.rviz
src/map_tools/: CMakeLists.txt  package.xml
src/map_tools/include/map_tools/: map_loader.hpp
src/map_tools/launch/: map_loader.launch.py
src/map_tools/maps/: map.yaml
src/map_tools/src/: map_loader.cpp
src/mpc_car/: CMakeLists.txt  package.xml
src/mpc_car/config/: mpc_car.yaml
src/mpc_car/include/arc_spline/: arc_spline.hpp
src/mpc_car/include/mpc_car/: mpc_car.hpp  mpc_car_node.hpp
src/mpc_car/launch/: mpc_car.launch.py
src/mpc_car/src/: mpc_car.cpp  mpc_car_node.cpp  src_spline.cpp
src/path_smoother/: CMakeLists.txt  package.xml
src/path_smoother/config/: planner_params.yaml
src/path_smoother/include/path_smoother/: smoother.hpp  smoother_node.hpp
src/path_smoother/include/path_smother/: smoother_node.hpp
src/path_smoother/launch/: smoother.launch.py
src/path_smoother/src/: smoother.cpp  smoother_node.cpp
src/planning_utils/: CMakeLists.txt  package.xml
src/planning_utils/include/planning_utils/: bucketedqueue.hpp  state_node.hpp
src/planning_utils/src/: bucketedqueue.cpp  dynamicvoronoi.cpp
