<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_simulator</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="2670378924@qq.com">lyx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>car_msgs</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>ament_cmake</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>car_msgs</build_export_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>car_msgs</exec_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <!-- Eigen3 as system library, for CMake -->
  <exec_depend>libeigen3-dev</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
